wordpress-tutorial/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: wordpress.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
